use download attribute for hrefs

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -91,7 +91,7 @@
                             <div class="form-group form-inline">
 
                                 <label class="mr-1" for="model-version">SOCcer Model:</label>
-                                <select id="model-version" name="model-version" class="mr-1 form-control">
+                                <select id="model-version" name="model-version" class="mr-1 form-control form-control-sm">
                                     <option value="1">model v1.0</option>
                                     <option value="2">model v2.0</option>
                                 </select>
@@ -135,7 +135,7 @@
                                 <img class="img-fluid" id="plot" alt="output plot">
                             </div>
 
-                            <a href="#" class="btn btn-sm btn-primary" id="download-link" target="_BLANK">Download Output</a>
+                            <a href="#" class="btn btn-sm btn-primary" id="download-link" target="_BLANK" download>Download Output</a>
                             <em class="small">* Directly opening the CSV file into Excel will render numbers as dates incorrectly</em>
                         </div>
 
