update old links

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -177,10 +177,10 @@
                 <h2 class="h3">Resources</h2>
                 <h3 class="h4">Links</h3>
                 <ul>
-                    <li><a href="http://www.bls.gov/soc/major_groups.htm">SOC 2010 System</a></li>
+                    <li><a href="https://www.bls.gov/soc/2010/">SOC 2010 System</a></li>
                     <li><a href="https://www.osha.gov/pls/imis/sic_manual.html">SIC 1987 System</a></li>
                     <li><a href="https://www.onetonline.org/">O*NET online</a></li>
-                    <li><a href="https://wwwn.cdc.gov/niosh-nioccs/">NIOCCS</a></li>
+                    <li><a href="https://wwwn.cdc.gov/nioccs3/">NIOCCS</a></li>
                 </ul>
             </section>
             <section class="tab-pane" id="help" role="tabpanel" aria-labelledby="help-tab">
