--- a/soccer/index.html
+++ b/soccer/index.html
@@ -18,16 +18,16 @@
         <div class="row mt-2">
             <div class="col text-left pt-2 d-none d-md-block">
                 <a href="https://cit.nih.gov/">
-                    <img src="static/img/logos/nih-cit-logo.png" alt="NIH Center for Information Technology - Division of Computational Bioscience" height="60">
+                    <img src="static/img/logos/cit-dcb-logo.svg" alt="NIH Center for Information Technology - Division of Computational Bioscience" height="50">
                 </a>
             </div>
-            <div class="col text-center">
+            <div class="col text-left text-md-right text-xl-center">
                 <a href=".">
                     <img src="static/img/logos/soccer-logo.png" alt="soccer logo" height="100">
                     <h1 class="sr-only">SOCcer</h1>
                 </a>
             </div>
-            <div class="col text-right d-none d-lg-block">
+            <div class="col text-right d-none d-xl-block">
                 <a href="https://dceg.cancer.gov/">
                     <img src="static/img/logos/nci-dceg-logo.svg" alt="National Cancer Institute - Division of Cancer Epidemiology and Genetics" height="60">
                 </a>
