--- a/soccer/index.html
+++ b/soccer/index.html
@@ -15,7 +15,7 @@
 <body class="d-flex flex-column">
     <header>
         <a href="#main" class="sr-only sr-only-focusable">Skip to main content</a>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row d-flex align-items-center">
                 <div class="col text-left d-none d-lg-block">
                     <a href="https://cit.nih.gov/">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="col text-right text-xl-center d-none d-lg-block">
                     <a href=".">
-                        <img src="static/img/logos/soccer-logo.png" alt="soccer logo" height="80">
+                        <img src="static/img/logos/soccer-logo.png" alt="soccer logo" height="100">
                     </a>
                 </div>
                 <div class="col text-right d-none d-xl-block">
@@ -35,41 +35,46 @@
             </div>
         </div>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+        <div class="bg-primary text-light d-none d-lg-block">
+            <div class="container py-1 my-0">
+                SOCcer (Standardized Occupation Coding for Computer-assisted Epidemiological Research)
+            </div>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark shadow-sm py-0">
             <div class="container">
-                <a class="navbar-brand" href="#">SOCcer</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#soccer-navigation" aria-controls="soccer-navigation" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand d-inline-block d-lg-none" href="#">SOCcer</a>
+                <button class="navbar-toggler my-1" type="button" data-toggle="collapse" data-target="#soccer-navigation" aria-controls="soccer-navigation" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
                 <div class="collapse navbar-collapse" id="soccer-navigation">
                     <ul class="nav navbar-nav mr-auto" role="tablist">
                         <li class="nav-item">
-                            <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
+                            <a class="nav-link active text-uppercase" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="soccer-tab" data-toggle="tab" href="#soccer" role="tab" aria-controls="soccer" aria-selected="false">SOCcer</a>
+                            <a class="nav-link text-uppercase" id="soccer-tab" data-toggle="tab" href="#soccer" role="tab" aria-controls="soccer" aria-selected="false">SOCcer</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="models-tab" data-toggle="tab" href="#models" role="tab" aria-controls="models" aria-selected="false">Models</a>
+                            <a class="nav-link text-uppercase" id="models-tab" data-toggle="tab" href="#models" role="tab" aria-controls="models" aria-selected="false">Models</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="socassign-tab" data-toggle="tab" href="#socassign" role="tab" aria-controls="socassign" aria-selected="false">SOCAssign</a>
+                            <a class="nav-link text-uppercase" id="socassign-tab" data-toggle="tab" href="#socassign" role="tab" aria-controls="socassign" aria-selected="false">SOCAssign</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="resources-tab" data-toggle="tab" href="#resources" role="tab" aria-controls="resources" aria-selected="false">Resources</a>
+                            <a class="nav-link text-uppercase" id="resources-tab" data-toggle="tab" href="#resources" role="tab" aria-controls="resources" aria-selected="false">Resources</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="help-tab" data-toggle="tab" href="#help" role="tab" aria-controls="help" aria-selected="false">Help</a>
+                            <a class="nav-link text-uppercase" id="help-tab" data-toggle="tab" href="#help" role="tab" aria-controls="help" aria-selected="false">Help</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" id="faq-tab" data-toggle="tab" href="#faq" role="tab" aria-controls="faq" aria-selected="false">FAQ</a>
+                            <a class="nav-link text-uppercase" id="faq-tab" data-toggle="tab" href="#faq" role="tab" aria-controls="faq" aria-selected="false">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -80,7 +85,7 @@
     <main class="bg-light py-sm-4 flex-auto" id="main">
         <div class="tab-content container py-4">
             <section class="tab-pane active" id="home" role="tabpanel" aria-labelledby="home-tab" tabindex="0">
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">Welcome to SOCcer</h1>
                     </div>
@@ -92,7 +97,7 @@
             </section>
             <section class="tab-pane" id="soccer" role="tabpanel" aria-labelledby="soccer-tab" tabindex="0">
 
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">SOCcer</h1>
                     </div>
@@ -173,7 +178,7 @@
 
             </section>
             <section class="tab-pane" id="models" role="tabpanel" aria-labelledby="models-tab" tabindex="0">
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">Models</h1>
                     </div>
@@ -181,9 +186,9 @@
                         <p>SOCcer can use different models, depending on the type of data that you have. The table below describes the models available.</p>
                         <table class="table table-sm border">
                             <thead>
-                                <tr class="bg-light">
-                                    <th class="border-top-0" scope="col" style="min-width: 100px;">Model</th>
-                                    <th class="border-top-0" scope="col">Description</th>
+                                <tr class="bg-primary text-light">
+                                    <th scope="col" style="min-width: 100px;">Model</th>
+                                    <th scope="col">Description</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -197,7 +202,7 @@
                 </div>
             </section>
             <section class="tab-pane" id="socassign" role="tabpanel" aria-labelledby="socassign-tab" tabindex="0">
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">SOCAssign</h1>
                     </div>
@@ -219,7 +224,7 @@
             </section>
             <section class="tab-pane" id="resources" role="tabpanel" aria-labelledby="resources-tab" tabindex="0">
 
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">Resources</h1>
                     </div>
@@ -237,7 +242,7 @@
             </section>
             <section class="tab-pane" id="help" role="tabpanel" aria-labelledby="help-tab" tabindex="0">
 
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">Help</h1>
                     </div>
@@ -270,7 +275,7 @@
                         <div class="table-responsive mb-4">
                             <table class="table table-sm border">
                                 <thead>
-                                    <tr class="bg-light">
+                                    <tr class="bg-primary text-light">
                                         <th scope="col">Id</th>
                                         <th scope="col">JobTitle</th>
                                         <th scope="col">SIC</th>
@@ -330,7 +335,7 @@
 
             </section>
             <section class="tab-pane" id="faq" role="tabpanel" aria-labelledby="faq-tab" tabindex="0">
-                <div class="card shadow">
+                <div class="card shadow-lg">
                     <div class="card-header bg-primary text-light">
                         <h1 class="h5 m-0">Frequently Asked Questions</h1>
                     </div>
@@ -351,7 +356,7 @@
             </section>
         </div>
     </main>
-    <footer class="text-left text-md-center py-4 bg-primary text-light">
+    <footer class="text-left text-md-center py-4 bg-primary-dark text-light">
         <div class="container">
             <ul class="list-inline">
                 <li class="d-block d-md-inline list-inline-item">
