NCIATWP-1249: make table headers more legible

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -184,10 +184,10 @@
                     </div>
                     <div class="card-body">
                         <p>SOCcer can use different models, depending on the type of data that you have. The table below describes the models available.</p>
-                        <table class="table table-sm border">
+                        <table class="table border">
                             <thead>
-                                <tr class="bg-primary text-light">
-                                    <th scope="col" style="min-width: 100px;">Model</th>
+                                <tr class="bg-primary-dark text-light">
+                                    <th scope="col" style="min-width: 120px;">Model</th>
                                     <th scope="col">Description</th>
                                 </tr>
                             </thead>
@@ -273,9 +273,9 @@
                         <p>The SOCcer results are provided in a comma-separated file that contains the row number, job title, SIC, job tasks, and the ten highest ranked SOC codes, with corresponding SOCcer scores.</p>
 
                         <div class="table-responsive mb-4">
-                            <table class="table table-sm border">
+                            <table class="table border">
                                 <thead>
-                                    <tr class="bg-primary text-light">
+                                    <tr class="bg-primary-dark text-light">
                                         <th scope="col">Id</th>
                                         <th scope="col">JobTitle</th>
                                         <th scope="col">SIC</th>
