make email label visible

--- a/soccer/index.html
+++ b/soccer/index.html
@@ -142,8 +142,10 @@
 
                                     <div id="alerts" class="mb-4"></div>
 
-                                    <label class="sr-only" for="email">Enter your email</label>
-                                    <input type="email" class="form-control mb-4" id="email" name="email" placeholder="Email address">
+                                    <div id="email-container" style="display: none">
+                                        <label class="mb-1 font-weight-bold" for="email">Email address</label>
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+                                    </div>
 
                                     <input type="hidden" name="file-id" id="file-id">
 
