--- a/soccer/index.html
+++ b/soccer/index.html
@@ -131,7 +131,7 @@
 
                         <div id="alerts" class="mb-4"></div>
 
-                        <div id="email-container" style="display: none">
+                        <div id="email-container" class="form-group" style="display: none">
                             <label class="mb-1 font-weight-bold" for="email">Email address</label>
                             <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
                         </div>
